Add GET /groups
